[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scene/Collectables/Hp_Collectable.png" type="Texture" id=1]
[ext_resource path="res://BabaGodotLib/Scenes/InteractiveObject/Collectable/Collectable.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scene/Collectables/HeartCollectable.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=11]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 15, 15 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 15, 15 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 15, 0, 15, 15 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 15, 15, 15 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 15, 15, 15, 15 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 15, 15 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 15, 0, 15, 15 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 15, 15, 15 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 15, 15, 15, 15 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 3 ), SubResource( 2 ), SubResource( 1 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 3 ), SubResource( 2 ), SubResource( 1 ) ],
"loop": true,
"name": "Beat",
"speed": 15.0
} ]

[node name="HeartCollectable" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="InteractArea" parent="." index="0"]
collision_layer = 0

[node name="CollisionShape2D" parent="InteractArea" index="0"]
shape = SubResource( 11 )

[node name="CollectSound" parent="." index="3"]
volume_db = -6.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="4"]
frames = SubResource( 5 )
animation = "Idle"

[node name="BeatCooldown" type="Timer" parent="." index="5"]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="BeatCooldown" to="." method="_on_BeatCooldown_timeout"]
